# oaqjp-final-project-emb-ai

./: server.py
EmotionDetection/: __init__.py  emotion_detection.py  pyproject.toml  test_emotion_detection.py
