[project]
name = "emotiondetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "pylint>=4.0.6",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "rich>=15.0.0",
]

[tool.uv.workspace]
members = [
    "EmotionDetection",
]
